# intel-8080-emulator

./: CMakeLists.txt  README.md
include/cpu/: cpu.h  flags.h  instructions.h  load.h  opcodes.h
include/disasm/: disasm.h
include/memory/: memory.h
include/util/: types.h
src/: disassembler.cpp  main.cpp
src/cpu/: CMakeLists.txt  cpu.cpp  flags.cpp  instructions.cpp  load.cpp  opcodes.cpp
src/disasm/: CMakeLists.txt  disasm.cpp
src/memory/: CMakeLists.txt  memory.cpp
